--- a/cassandra-config.properties
+++ b/cassandra-config.properties
@@ -5,3 +5,4 @@ spring.data.cassandra.contact-points=ec2-3-16-43-118.us-east-2.compute.amazonaws
 spring.data.cassandra.keyspace-name=demodatabase
 spring.data.cassandra.port=9042
 spring.data.cassandra.schema-action=NONE
+server.port=8888
